--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="all.css">
 </head>
 <body>
-    <h1 class="title-primary">這是藍色的h1標題</h1>
+    <h1 class="title-primary">修改標題</h1>
     
 </body>
 </html>
